Windows script: added OPT_ARGS handling. Fixes #110
on this occasion, the script was refactored